--- a/javaapp-pipeline/Jenkinsfile
+++ b/javaapp-pipeline/Jenkinsfile
@@ -2,7 +2,13 @@ pipeline {
     agent any 
 
        stages {
-        
+        stage('Checkout') {
+        steps {
+         git changelog: false, poll: false, url: 'https://github.com/pranay-meka/jenkins.git'
+    
+            }
+        }
+
        stage('Unit Tests') {
             when {
                 branch 'dev' 
@@ -13,4 +19,33 @@ pipeline {
             }
             }
         }
+        stage('Build') {
+            when {
+                branch 'main' 
+            }
+            steps {
+                dir('javaapp-pipeline') {
+                sh 'mvn clean package'
+            }
+        }
+        }
+        stage('Deploy') {
+            when {
+                branch 'main' 
+            }
+            steps {
+                dir('javaapp-pipeline/target') {
+                sh '''
+                    if pgrep -f "java -jar java-sample-21-1.0.0.jar" > /dev/null; then
+                        pkill -f "java -jar java-sample-21-1.0.0.jar"
+                        echo "App was running and has been killed."
+                    else
+                        echo "App is not running."
+                    fi
+                    JENKINS_NODE_COOKIE=dontKillMe nohup java -jar java-sample-21-1.0.0.jar > app.log 2>&1 &
+                 '''
+                 }
+            }
+        }
+    }
 }
