--- a/javaapp-pipeline/Jenkinsfile
+++ b/javaapp-pipeline/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         }
         stage('Build') {
             when {
-                branch 'main' 
+                branch 'master' 
             }
             steps {
                 dir('javaapp-pipeline') {
@@ -31,7 +31,7 @@ pipeline {
         }
         stage('Deploy') {
             when {
-                branch 'main' 
+                branch 'master' 
             }
             steps {
                 dir('javaapp-pipeline/target') {
